chore: remove AOS library, escape HTML ampersands, and harden script logic
- Removed AOS script, CSS, and data attributes across index and blog pages.
- Escaped raw ampersands content to &amp; for HTML validation.
- Added null-safety guards to handleNavbarScroll and handleScrollSpy in script.js.

--- a/index.html
+++ b/index.html
@@ -115,9 +115,7 @@
       })();
     </script>
 
-    <!-- AOS Animation Library v2.3.4 (CSS + JS must match) -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css" />
-    <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+
     
     <!-- DevIcons v2.16.0 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.16.0/devicon.min.css" />
@@ -205,23 +203,23 @@
     <!-- Hero Section -->
     <section id="home" class="hero-section">
       <div class="container hero-content">
-        <div class="availability-badge" data-aos="fade-down" data-aos-delay="100">
+        <div class="availability-badge">
           <span class="pulse-dot"></span>
           Available for Opportunities
         </div>
-        <span class="hero-greeting" data-aos="fade-up" data-aos-delay="200">Hi, my name is</span>
-        <h1 class="hero-name" data-aos="fade-up" data-aos-delay="300">
+        <span class="hero-greeting">Hi, my name is</span>
+        <h1 class="hero-name">
           Aryan Panwar
         </h1>
-        <h2 class="hero-title" data-aos="fade-up" data-aos-delay="400">
+        <h2 class="hero-title">
           <span id="typewriter"></span><span class="typewriter-cursor"></span>
         </h2>
-        <p class="hero-description" data-aos="fade-up" data-aos-delay="500">
+        <p class="hero-description">
           I'm a final-year Electronics and Communication Engineering student at <strong>MIET Meerut</strong> who
           builds real products — from a live AI stylist app to an open-source
           voice platform. I bridge the gap between low-level hardware logic and high-level AI orchestration.
         </p>
-        <div class="hero-meta" data-aos="fade-up" data-aos-delay="600">
+        <div class="hero-meta">
           <span>B.Tech ECE @ MIET</span>
           <span>Class of 2026</span>
           <span>Based in Meerut, UP</span>
@@ -269,13 +267,13 @@
     <!-- About Section -->
     <section id="about" class="section section-padding">
       <div class="container">
-        <div class="section-header" data-aos="fade-up">
+        <div class="section-header">
           <span class="section-number">01.</span>
           <h2 class="section-title">About Me</h2>
         </div>
 
         <div class="about-grid">
-          <div class="about-text" data-aos="fade-right">
+          <div class="about-text">
             <p>
               I'm a final-year Electronics and Communication Engineering student
               at MIET Meerut with hands-on experience in embedded systems,
@@ -301,11 +299,11 @@
               <div class="tech-interest-grid">
                 <div class="interest-item">
                   <span class="interest-icon"><i data-lucide="bot"></i></span>
-                  Agentic AI & LLMs
+                  Agentic AI &amp; LLMs
                 </div>
                 <div class="interest-item">
                   <span class="interest-icon"><i data-lucide="cpu"></i></span>
-                  IoT & Embedded Systems
+                  IoT &amp; Embedded Systems
                 </div>
                 <div class="interest-item">
                   <span class="interest-icon"
@@ -320,7 +318,7 @@
             </div>
           </div>
 
-          <div class="info-cards" data-aos="fade-left">
+          <div class="info-cards">
             <div class="info-card">
               <h3><i data-lucide="graduation-cap"></i> Education</h3>
               <div class="info-item">
@@ -348,13 +346,13 @@
     <!-- Experience Section -->
     <section id="experience" class="section section-padding">
       <div class="container">
-        <div class="section-header" data-aos="fade-up">
+        <div class="section-header">
           <span class="section-number">02.</span>
           <h2 class="section-title">Where I've Worked</h2>
         </div>
 
         <div class="timeline">
-          <div class="timeline-item" data-aos="fade-up">
+          <div class="timeline-item">
             <div class="experience-card">
               <div class="timeline-header">
                 <span class="timeline-date">Jun 2025 – Aug 2025</span>
@@ -401,17 +399,17 @@
     <!-- Projects Section -->
     <section id="projects">
       <div class="container">
-        <div class="section-header" data-aos="fade-up">
+        <div class="section-header">
           <span class="section-number">03.</span>
-          <h2 class="section-title">Things I've Shipped & Built</h2>
+          <h2 class="section-title">Things I've Shipped &amp; Built</h2>
         </div>
 
         <!-- Row 1: Featured Products -->
         <div class="projects-row">
-          <span class="row-label" data-aos="fade-right">Featured Products</span>
+          <span class="row-label">Featured Products</span>
           <div class="projects-grid">
             <!-- FitWardrobe -->
-            <div class="project-card" data-aos="fade-up" data-aos-delay="100">
+            <div class="project-card">
               <div class="project-thumbnail">
                 <img src="assets/projects/fitwardrobe.jpg" alt="FitWardrobe App Preview" loading="lazy">
                 <div class="thumbnail-overlay"></div>
@@ -424,7 +422,7 @@
                     <a href="https://fitwardrobe.me" target="_blank" rel="noopener noreferrer"><i data-lucide="external-link"></i></a>
                   </div>
                 </div>
-                <div class="role-badge">Founder & Product Lead</div>
+                <div class="role-badge">Founder &amp; Product Lead</div>
                 <h3>FitWardrobe</h3>
                 <p class="project-desc">Privacy-first AI fashion stylist app. Uses on-device Gemini Vision to analyze wardrobes without server uploads. Built with React and Capacitor.</p>
                 <ul class="project-tech-list">
@@ -437,7 +435,7 @@
             </div>
 
             <!-- Mithivoices -->
-            <div class="project-card" data-aos="fade-up" data-aos-delay="200">
+            <div class="project-card">
               <div class="project-thumbnail">
                 <img src="assets/projects/mithivoices.png" alt="Mithivoices Platform Preview" loading="lazy">
                 <div class="thumbnail-overlay"></div>
@@ -449,7 +447,7 @@
                     <a href="https://github.com/mithivoices/ai-voice-platform" target="_blank" rel="noopener noreferrer"><i data-lucide="github"></i></a>
                   </div>
                 </div>
-                <div class="role-badge">Creator & Maintainer</div>
+                <div class="role-badge">Creator &amp; Maintainer</div>
                 <h3>Mithivoices</h3>
                 <p class="project-desc">Open-source TTS/STT platform with 19 neural voices. Modular architecture supporting multi-LLM orchestration and Piper TTS.</p>
                 <ul class="project-tech-list">
@@ -462,7 +460,7 @@
             </div>
 
             <!-- SEO & GEO Optimizer Skill -->
-            <div class="project-card" data-aos="fade-up" data-aos-delay="300">
+            <div class="project-card">
               <div class="project-thumbnail" style="background: linear-gradient(135deg, var(--primary) 0%, var(--surface-light) 100%);">
                 <div class="thumbnail-overlay"></div>
               </div>
@@ -474,11 +472,11 @@
                     <a href="https://github.com/Aryanpanwar10005/seo-geo-optimizer" target="_blank" rel="noopener noreferrer"><i data-lucide="github"></i></a>
                   </div>
                 </div>
-                <div class="role-badge">Creator & Maintainer</div>
-                <h3>SEO & GEO Optimizer Skill</h3>
-                <p class="project-desc">Universal SEO & GEO skill for AI IDEs like Cursor, Windsurf, Copilot, Bolt, etc. Optimizes for Google, Bing, Perplexity, and ChatGPT.</p>
+                <div class="role-badge">Creator &amp; Maintainer</div>
+                <h3>SEO &amp; GEO Optimizer Skill</h3>
+                <p class="project-desc">Universal SEO &amp; GEO skill for AI IDEs like Cursor, Windsurf, Copilot, Bolt, etc. Optimizes for Google, Bing, Perplexity, and ChatGPT.</p>
                 <ul class="project-tech-list">
-                  <li>SEO & GEO</li>
+                  <li>SEO &amp; GEO</li>
                   <li>Agentic AI</li>
                   <li>Prompts</li>
                 </ul>
@@ -489,10 +487,10 @@
 
         <!-- Row 2: Hardware & IoT -->
         <div class="projects-row">
-          <span class="row-label" data-aos="fade-right">Hardware & Logic</span>
+          <span class="row-label">Hardware &amp; Logic</span>
           <div class="projects-grid">
             <!-- EV Charging -->
-            <div class="project-card" data-aos="fade-up" data-aos-delay="100">
+            <div class="project-card">
               <div class="project-thumbnail">
                 <img src="assets/projects/evcharger.png" alt="Wireless EV Charger Preview" loading="lazy">
                 <div class="thumbnail-overlay"></div>
@@ -516,7 +514,7 @@
             </div>
 
             <!-- Smart Staircase -->
-            <div class="project-card" data-aos="fade-up" data-aos-delay="200">
+            <div class="project-card">
               <div class="project-thumbnail">
                 <img src="assets/projects/staircase.png" alt="Smart Staircase Project" loading="lazy">
                 <div class="thumbnail-overlay"></div>
@@ -539,7 +537,7 @@
             </div>
 
             <!-- Autonomous Robot -->
-            <div class="project-card" data-aos="fade-up" data-aos-delay="300">
+            <div class="project-card">
               <div class="project-thumbnail">
                 <img src="assets/projects/robot.png" alt="Autonomous Robot Preview" loading="lazy">
                 <div class="thumbnail-overlay"></div>
@@ -564,7 +562,7 @@
           </div>
         </div>
 
-        <div class="project-cta" data-aos="fade-up">
+        <div class="project-cta">
           <a href="https://github.com/Aryanpanwar10005" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
             Explore Complete Archive
           </a>
@@ -580,7 +578,7 @@
           <h2 class="section-title">Technical Arsenal</h2>
         </div>
 
-        <div class="skills-bento" data-aos="fade-up">
+        <div class="skills-bento">
 
           <!-- Card 1: Embedded (Large) -->
           <div class="skill-card skill-card--large">
@@ -702,7 +700,7 @@
           <h2 class="section-title">Insights &amp; Articles</h2>
         </div>
 
-        <div class="project-bento" data-aos="fade-up">
+        <div class="project-bento">
           <div class="bento-grid-3">
             <!-- Article 1 -->
             <div class="project-card">
@@ -764,7 +762,7 @@
 
     <!-- Contact Section -->
     <section id="contact" class="section section-padding">
-      <div class="container" data-aos="fade-up">
+      <div class="container">
         <div class="contact-section">
           <span class="contact-subtitle">What's Next?</span>
           <h2>Get In Touch</h2>
@@ -805,7 +803,7 @@
           </a>
         </div>
         <div class="footer-credit">
-          <p>Designed & Built by <a href="/">Aryan Panwar</a></p>
+          <p>Designed &amp; Built by <a href="/">Aryan Panwar</a></p>
           <p>© 2026 Aryan Panwar</p>
         </div>
       </div>
