--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
 
 
     
-    <!-- DevIcons v2.16.0 -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.16.0/devicon.min.css" />
+    <!-- DevIcons -->
+    <link rel="stylesheet" href="assets/vendor/devicon.min.css" />
 
     <!-- Lucide Icons v0.525.0 -->
-    <script src="https://unpkg.com/lucide@0.525.0/dist/umd/lucide.min.js"></script>
+    <script src="assets/vendor/lucide.min.js"></script>
 
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <link rel="stylesheet" href="styles.css" />
