chore: cleanup project and sync production-ready resume assets
- Deleted old "aryan panwar.pdf" from index
- Tracked new "Aryan_Panwar.pdf"
- Added resume.html and resume.css as master source
- Updated index.html links to new PDF

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           >Contact</a
         >
         <a
-          href="aryan%20panwar.pdf"
+          href="aryan_panwar.pdf"
           target="_blank"
           rel="noopener noreferrer"
           class="btn btn-primary btn-resume-mobile"
@@ -180,7 +180,7 @@
               <i data-lucide="moon" class="moon-icon"></i>
             </button>
             <a
-              href="aryan%20panwar.pdf"
+              href="aryan_panwar.pdf"
               target="_blank"
               rel="noopener noreferrer"
               class="btn btn-primary btn-resume-nav"
@@ -333,6 +333,14 @@
 
             <div class="info-card">
               <h3><i data-lucide="award"></i> Certifications</h3>
+              <div class="info-item">
+                <span class="info-title">Google AI Essentials</span>
+                <span class="info-meta">Google / Coursera | 2026</span>
+              </div>
+              <div class="info-item">
+                <span class="info-title">Intro to Transformer-Based NLP</span>
+                <span class="info-meta">NVIDIA | 2026</span>
+              </div>
               <div class="info-item">
                 <span class="info-title">Industrial Automation</span>
                 <span class="info-meta">Potash Limited Training</span>
@@ -708,14 +716,14 @@
                 <div class="project-header-top">
                   <i data-lucide="book-open" class="project-icon"></i>
                   <div class="project-links">
-                    <a href="blog/what-is-agentic-ai-developer.html"><i data-lucide="external-link"></i></a>
+                    <a href="blog/technical-seo-for-ai-products.html"><i data-lucide="external-link"></i></a>
                   </div>
                 </div>
-                <h3>What is an Agentic AI Developer?</h3>
-                <p class="project-desc">A deep dive into the role blending software engineering with LLM orchestration and autonomous reasoning.</p>
+                <h3>Technical SEO for AI Products</h3>
+                <p class="project-desc">How to optimize your product for generative AI engines (GEO) and traditional search.</p>
                 <ul class="project-tech-list">
-                  <li>Agentic AI</li>
-                  <li>Careers</li>
+                  <li>SEO &amp; GEO</li>
+                  <li>AI Strategy</li>
                 </ul>
               </div>
             </div>
@@ -726,14 +734,14 @@
                 <div class="project-header-top">
                   <i data-lucide="book-open" class="project-icon"></i>
                   <div class="project-links">
-                    <a href="blog/modern-embedded-engineer.html"><i data-lucide="external-link"></i></a>
+                    <a href="blog/building-llm-orchestration-tools.html"><i data-lucide="external-link"></i></a>
                   </div>
                 </div>
-                <h3>The Modern Embedded Engineer</h3>
-                <p class="project-desc">How hardware logic, RTOS, and Edge AI are shaping the future of physical computing.</p>
+                <h3>Building LLM Orchestration Tools</h3>
+                <p class="project-desc">Architecting systems that manage multiple AI models and autonomous agent workflows.</p>
                 <ul class="project-tech-list">
-                  <li>Hardware</li>
-                  <li>Edge AI</li>
+                  <li>Agentic AI</li>
+                  <li>Architecture</li>
                 </ul>
               </div>
             </div>
@@ -744,14 +752,14 @@
                 <div class="project-header-top">
                   <i data-lucide="book-open" class="project-icon"></i>
                   <div class="project-links">
-                    <a href="blog/seo-for-product-managers.html"><i data-lucide="external-link"></i></a>
+                    <a href="blog/what-is-agentic-ai-developer.html"><i data-lucide="external-link"></i></a>
                   </div>
                 </div>
-                <h3>SEO for Product Managers</h3>
-                <p class="project-desc">Why technical SEO and GEO (Generative Engine Optimization) are essential product features.</p>
+                <h3>What is an Agentic AI Developer?</h3>
+                <p class="project-desc">A deep dive into the role blending software engineering with LLM orchestration and autonomous reasoning.</p>
                 <ul class="project-tech-list">
-                  <li>Product Growth</li>
-                  <li>SEO</li>
+                  <li>Agentic AI</li>
+                  <li>Careers</li>
                 </ul>
               </div>
             </div>
