Sync portfolio with latest resume and cleanup production files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Final-year ECE student, product builder, and AI explorer. Built FitWardrobe (AI app) and Mithivoices (AI voice platform). Based in Meerut, UP."
+      content="Aryan Panwar - Gen AI Engineer | Embedded Systems | AI Product Manager. Final-year ECE student at MIET Meerut building production-ready AI applications and intelligent hardware."
     />
     <meta
       name="keywords"
@@ -18,11 +18,11 @@
     <meta property="og:url" content="https://aryanpanwar.in/" />
     <meta
       property="og:title"
-      content="Aryan Panwar - ECE Engineer | Product Builder | AI Explorer"
+      content="Aryan Panwar - Gen AI Engineer | Embedded Systems | AI Product Manager"
     />
     <meta
       property="og:description"
-      content="Final-year ECE student, product builder, and AI explorer. Built FitWardrobe (AI app) and Mithivoices (AI voice platform). Based in Meerut, UP."
+      content="Gen AI Engineer and final-year ECE student at MIET Meerut. Building production-grade AI tools and intelligent embedded systems."
     />
     <meta
       property="og:image"
@@ -32,11 +32,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Aryan Panwar - ECE Engineer | Product Builder | AI Explorer"
+      content="Aryan Panwar - Gen AI Engineer | Embedded Systems | AI Product Manager"
     />
     <meta
       name="twitter:description"
-      content="Final-year ECE student, product builder, and AI explorer. Built FitWardrobe (AI app) and Mithivoices (AI voice platform). Based in Meerut, UP."
+      content="Gen AI Engineer and final-year ECE student at MIET Meerut. Building production-grade AI tools and intelligent embedded systems."
     />
     <meta
       property="twitter:image"
@@ -76,8 +76,8 @@
             "width": 1920,
             "height": 912
           },
-          "jobTitle": "Embedded Systems Engineer & Agentic AI Developer",
-          "description": "Final-year ECE student at MIET Meerut with hands-on experience in embedded systems, industrial instrumentation, and IoT automation. Building intelligent hardware and software products.",
+          "jobTitle": "Gen AI Engineer & Embedded Systems Engineer",
+          "description": "Gen AI Engineer and final-year ECE student at MIET Meerut. Specializing in building production-ready AI applications, agentic systems, and intelligent hardware products.",
           "email": "aryanpanwar10005@gmail.com",
           "telephone": "+917817060230",
           "alumniOf": {
@@ -100,7 +100,7 @@
     }
     </script>
 
-    <title>Aryan Panwar - ECE Engineer | Product Builder | AI Explorer</title>
+    <title>Aryan Panwar - Gen AI Engineer | Embedded Systems | AI Product Manager</title>
 
     <!-- Google Fonts Preconnect & Styles -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -215,12 +215,11 @@
           <span id="typewriter"></span><span class="typewriter-cursor"></span>
         </h2>
         <p class="hero-description">
-          I'm a final-year Electronics and Communication Engineering student at <strong>MIET Meerut</strong> who
-          builds real products — from a live AI stylist app to an open-source
-          voice platform. I bridge the gap between low-level hardware logic and high-level AI orchestration.
+          I'm a <strong>Gen AI Engineer</strong> and final-year <strong>Electronics & Communication Engineering</strong> student at <strong>MIET Meerut</strong> who builds real products — from a live AI stylist app to an open-source voice platform. I bridge the gap between low-level hardware logic and high-level AI orchestration.
         </p>
         <div class="hero-meta">
-          <span>B.Tech ECE @ MIET</span>
+          <span>Gen AI Engineer @ MIET</span>
+          <span>AI Product Manager</span>
           <span>Class of 2026</span>
           <span>Based in Meerut, UP</span>
         </div>
@@ -289,6 +288,9 @@
               voices across 8 languages.
             </p>
             <p>
+              As a <strong>Gen AI Engineer</strong>, I specialize in building production-ready AI applications using Large Language Models, on-device AI, and agentic systems. My work combines deep technical knowledge of embedded systems with modern AI/ML tools like Gemini Vision API, Piper TTS, Whisper STT, and various LLM orchestration frameworks.
+            </p>
+            <p>
               I'm currently exploring Agentic AI, Large Language Models (LLMs),
               and data-driven systems — building on my hardware foundation to
               move into the future of intelligent technology.
@@ -298,16 +300,23 @@
               <h3>Technical Interests:</h3>
               <div class="tech-interest-grid">
                 <div class="interest-item">
+                  <span class="interest-icon"><i data-lucide="brain-circuit"></i></span>
+                  Gen AI Engineering
+                </div>
+                <div class="interest-item">
                   <span class="interest-icon"><i data-lucide="bot"></i></span>
                   Agentic AI &amp; LLMs
+                </div>
+                <div class="interest-item">
+                  <span class="interest-icon"><i data-lucide="rocket"></i></span>
+                  AI Product Management
                 </div>
                 <div class="interest-item">
                   <span class="interest-icon"><i data-lucide="cpu"></i></span>
                   IoT &amp; Embedded Systems
                 </div>
                 <div class="interest-item">
-                  <span class="interest-icon"
-                    ><i data-lucide="settings"></i></span>
+                  <span class="interest-icon"><i data-lucide="settings"></i></span>
                   Industrial Automation
                 </div>
                 <div class="interest-item">
@@ -324,6 +333,7 @@
               <div class="info-item">
                 <span class="info-title">MIET Meerut</span>
                 <span class="info-meta">B.Tech ECE | 2022-2026</span>
+                <span class="info-meta"><strong>CGPA: 7.00 / 10</strong></span>
               </div>
               <div class="info-item">
                 <span class="info-title">Shardein School</span>
@@ -335,15 +345,17 @@
               <h3><i data-lucide="award"></i> Certifications</h3>
               <div class="info-item">
                 <span class="info-title">Google AI Essentials</span>
-                <span class="info-meta">Google / Coursera | 2026</span>
+                <span class="info-meta">Google / Coursera | Feb 2026</span>
+                <a href="https://coursera.org/verify/specialization/NJYHIPVRXNW5" target="_blank" rel="noopener noreferrer" class="cert-link">Verify Certificate</a>
               </div>
               <div class="info-item">
                 <span class="info-title">Intro to Transformer-Based NLP</span>
-                <span class="info-meta">NVIDIA | 2026</span>
+                <span class="info-meta">NVIDIA Deep Learning Institute | Feb 2026</span>
+                <a href="https://learn.nvidia.com/certificates?id=GClvxekBT0SWUVCvjdGB5A" target="_blank" rel="noopener noreferrer" class="cert-link">Verify Certificate</a>
               </div>
               <div class="info-item">
-                <span class="info-title">Industrial Automation</span>
-                <span class="info-meta">Potash Limited Training</span>
+                <span class="info-title">Industrial Automation Training</span>
+                <span class="info-meta">Indian Potash Limited | Aug 2025</span>
               </div>
             </div>
           </div>
@@ -363,7 +375,7 @@
           <div class="timeline-item">
             <div class="experience-card">
               <div class="timeline-header">
-                <span class="timeline-date">Jun 2025 – Aug 2025</span>
+                <span class="timeline-date">Jun 2024 – Aug 2024</span>
                 <h3 class="timeline-role">
                   Assistant - Instrumentation Department
                 </h3>
@@ -426,18 +438,22 @@
                 <div class="project-header-top">
                   <i data-lucide="layout" class="project-icon"></i>
                   <div class="project-links">
+                    <span class="live-badge">v1.0.1</span>
                     <span class="live-badge">LIVE</span>
                     <a href="https://fitwardrobe.me" target="_blank" rel="noopener noreferrer"><i data-lucide="external-link"></i></a>
                   </div>
                 </div>
                 <div class="role-badge">Founder &amp; Product Lead</div>
                 <h3>FitWardrobe</h3>
-                <p class="project-desc">Privacy-first AI fashion stylist app. Uses on-device Gemini Vision to analyze wardrobes without server uploads. Built with React and Capacitor.</p>
+                <p class="project-desc">Privacy-first AI fashion stylist app (v1.0.1 live). Uses on-device Gemini Vision to analyze wardrobes without server uploads. Managing full product lifecycle: APK distribution, SEO-driven growth, PostHog analytics, and roadmap prioritization. Built with React and Capacitor.</p>
                 <ul class="project-tech-list">
                   <li>React</li>
                   <li>Capacitor</li>
-                  <li>Gemini API</li>
+                  <li>Gemini 2.0 Flash API</li>
                   <li>IndexedDB</li>
+                  <li>Supabase</li>
+                  <li>PostHog</li>
+                  <li>Vercel</li>
                 </ul>
               </div>
             </div>
@@ -452,17 +468,20 @@
                 <div class="project-header-top">
                   <i data-lucide="mic" class="project-icon"></i>
                   <div class="project-links">
+                    <span class="live-badge" style="background: var(--primary);">v0.2.0</span>
                     <a href="https://github.com/mithivoices/ai-voice-platform" target="_blank" rel="noopener noreferrer"><i data-lucide="github"></i></a>
                   </div>
                 </div>
                 <div class="role-badge">Creator &amp; Maintainer</div>
                 <h3>Mithivoices</h3>
-                <p class="project-desc">Open-source TTS/STT platform with 19 neural voices. Modular architecture supporting multi-LLM orchestration and Piper TTS.</p>
+                <p class="project-desc">Open-source TTS/STT platform with 19 neural voices across 8 languages. Released v0.2.0 with multi-LLM support within 30 days. Modular architecture supporting LLM orchestration, directed CI/CD pipeline via GitHub Actions, and active contributor community.</p>
                 <ul class="project-tech-list">
                   <li>Python</li>
                   <li>FastAPI</li>
+                  <li>React</li>
                   <li>Piper TTS</li>
-                  <li>Whisper</li>
+                  <li>Whisper STT</li>
+                  <li>GitHub Actions</li>
                 </ul>
               </div>
             </div>
@@ -510,13 +529,15 @@
                     <a href="https://github.com/Aryanpanwar10005/wireless_ev_charging" target="_blank" rel="noopener noreferrer"><i data-lucide="github"></i></a>
                   </div>
                 </div>
+                <div class="role-badge">Sep – Nov 2025</div>
                 <h3>Wireless EV Charger</h3>
-                <p class="project-desc">IPT-based wireless power transfer system with 85% efficiency. Features automated alignment detection via IR sensor arrays.</p>
+                <p class="project-desc">IPT-based wireless power transfer system with 85% efficiency. Developed Embedded C firmware achieving 95% vehicle positioning accuracy via IR sensor arrays, with automated alignment detection and emergency shutdown systems.</p>
                 <ul class="project-tech-list">
                   <li>Arduino</li>
-                  <li>IPT</li>
                   <li>Embedded C</li>
+                  <li>Inductive Power Transfer</li>
                   <li>IoT</li>
+                  <li>IR Sensors</li>
                 </ul>
               </div>
             </div>
@@ -534,8 +555,9 @@
                     <a href="https://github.com/Aryanpanwar10005/smart_staircase_lighting_system" target="_blank" rel="noopener noreferrer"><i data-lucide="github"></i></a>
                   </div>
                 </div>
+                <div class="role-badge">Oct – Nov 2024</div>
                 <h3>Smart Staircase</h3>
-                <p class="project-desc">Motion-activated sequential lighting system reducing energy consumption by 45%. Non-blocking millis() timing logic.</p>
+                <p class="project-desc">Motion-activated sequential LED control system reducing energy consumption by 45%. Intelligent IR detection with non-blocking millis() timing logic for efficient automation.</p>
                 <ul class="project-tech-list">
                   <li>Arduino</li>
                   <li>Sensors</li>
@@ -596,8 +618,8 @@
             </div>
             <p class="skill-card-desc">Designing low-level systems and robust circuit architectures.</p>
             <div class="skill-badges">
-              <span class="skill-badge"><i class="devicon-cplusplus-plain"></i> C/C++</span>
-              <span class="skill-badge"><i class="devicon-arduino-plain"></i> Arduino</span>
+              <span class="skill-badge"><i class="devicon-cplusplus-plain"></i> Embedded C/C++</span>
+              <span class="skill-badge"><i class="devicon-arduino-plain"></i> Arduino (C/C++)</span>
               <span class="skill-badge">8051 Family</span>
               <span class="skill-badge">ARM MCU</span>
               <span class="skill-badge">UART / I2C</span>
@@ -607,7 +629,7 @@
               <span class="skill-badge">PCB Design</span>
               <span class="skill-badge">LabVIEW</span>
               <span class="skill-badge">MATLAB</span>
-              <span class="skill-badge">RTD / Pressure / Flow Calib.</span>
+              <span class="skill-badge">RTD / Pressure / Calibration</span>
               <span class="skill-badge">SIS / ESD</span>
             </div>
           </div>
@@ -624,6 +646,8 @@
               <span class="skill-badge">On-Device AI</span>
               <span class="skill-badge">Edge AI</span>
               <span class="skill-badge">Machine Learning</span>
+              <span class="skill-badge">Transformer-Based NLP</span>
+              <span class="skill-badge">Speech Recognition</span>
               <span class="skill-badge">Piper TTS</span>
               <span class="skill-badge">Whisper STT</span>
               <span class="skill-badge">LLM APIs</span>
@@ -643,6 +667,8 @@
               <span class="skill-badge">LLM Fine-tuning</span>
               <span class="skill-badge">LLMOps</span>
               <span class="skill-badge">Prompt Engineering</span>
+              <span class="skill-badge">ElevenLabs</span>
+              <span class="skill-badge">HeyGen</span>
               <span class="skill-badge">Cursor</span>
               <span class="skill-badge">Windsurf</span>
               <span class="skill-badge">Replit</span>
@@ -686,6 +712,8 @@
             <div class="skill-badges">
               <span class="skill-badge">Product Management</span>
               <span class="skill-badge">Product Strategy</span>
+              <span class="skill-badge">Agile</span>
+              <span class="skill-badge">Rapid Prototyping</span>
               <span class="skill-badge">SEO</span>
               <span class="skill-badge">Open Source</span>
               <span class="skill-badge">Vibe Coding</span>
@@ -693,6 +721,22 @@
               <span class="skill-badge">Industrial Calibration</span>
               <span class="skill-badge">Process Control</span>
               <span class="skill-badge">Data Analytics</span>
+            </div>
+          </div>
+
+          <!-- Card 6: Programming Languages -->
+          <div class="skill-card skill-card--wide">
+            <div class="skill-card-header">
+              <span class="skill-card-icon">&#10024;</span>
+              <h3 class="skill-card-title">Programming Languages</h3>
+            </div>
+            <p class="skill-card-desc">Core languages used for full-stack and embedded development.</p>
+            <div class="skill-badges">
+              <span class="skill-badge"><i class="devicon-python-plain"></i> Python</span>
+              <span class="skill-badge"><i class="devicon-javascript-plain"></i> JavaScript</span>
+              <span class="skill-badge"><i class="devicon-typescript-plain"></i> TypeScript</span>
+              <span class="skill-badge"><i class="devicon-cplusplus-plain"></i> Embedded C/C++</span>
+              <span class="skill-badge"><i class="devicon-arduino-plain"></i> Arduino (C/C++)</span>
             </div>
           </div>
 
