fix: add missing project image for seo-geo-optimizer skill

--- a/index.html
+++ b/index.html
@@ -488,7 +488,8 @@
 
             <!-- SEO & GEO Optimizer Skill -->
             <div class="project-card">
-              <div class="project-thumbnail" style="background: linear-gradient(135deg, var(--primary) 0%, var(--surface-light) 100%);">
+              <div class="project-thumbnail">
+                <img src="assets/projects/seo-geo-optimizer.svg" alt="SEO & GEO Optimizer Skill Preview" loading="lazy">
                 <div class="thumbnail-overlay"></div>
               </div>
               <div class="project-body">
