feat: replace cli svg with premium 3d isometric image for seo-geo-optimizer

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
             <!-- SEO & GEO Optimizer Skill -->
             <div class="project-card">
               <div class="project-thumbnail">
-                <img src="assets/projects/seo-geo-optimizer.svg" alt="SEO & GEO Optimizer Skill Preview" loading="lazy">
+                <img src="assets/projects/seo-geo-optimizer.png" alt="SEO & GEO Optimizer Skill Preview" loading="lazy">
                 <div class="thumbnail-overlay"></div>
               </div>
               <div class="project-body">
