--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                   <i data-lucide="mic" class="project-icon"></i>
                   <div class="project-links">
                     <span class="live-badge" style="background: var(--primary);">v0.2.0</span>
-                    <a href="https://github.com/mithivoices/ai-voice-platform" target="_blank" rel="noopener noreferrer"><i data-lucide="github"></i></a>
+                    <a href="https://github.com/mithivoices/ai-voice-platform" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile"><i data-lucide="github"></i></a>
                   </div>
                 </div>
                 <div class="role-badge">Creator &amp; Maintainer</div>
@@ -537,7 +537,7 @@
                   <i data-lucide="search" class="project-icon"></i>
                   <div class="project-links">
                     <span class="live-badge" style="background: var(--primary);">NEW</span>
-                    <a href="https://github.com/Aryanpanwar10005/seo-geo-optimizer" target="_blank" rel="noopener noreferrer"><i data-lucide="github"></i></a>
+                    <a href="https://github.com/Aryanpanwar10005/seo-geo-optimizer" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile"><i data-lucide="github"></i></a>
                   </div>
                 </div>
                 <div class="role-badge">Creator &amp; Maintainer</div>
@@ -567,7 +567,7 @@
                 <div class="project-header-top">
                   <i data-lucide="zap" class="project-icon"></i>
                   <div class="project-links">
-                    <a href="https://github.com/Aryanpanwar10005/wireless_ev_charging" target="_blank" rel="noopener noreferrer"><i data-lucide="github"></i></a>
+                    <a href="https://github.com/Aryanpanwar10005/wireless_ev_charging" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile"><i data-lucide="github"></i></a>
                   </div>
                 </div>
                 <div class="role-badge">Sep – Nov 2025</div>
@@ -593,7 +593,7 @@
                 <div class="project-header-top">
                   <i data-lucide="lightbulb" class="project-icon"></i>
                   <div class="project-links">
-                    <a href="https://github.com/Aryanpanwar10005/smart_staircase_lighting_system" target="_blank" rel="noopener noreferrer"><i data-lucide="github"></i></a>
+                    <a href="https://github.com/Aryanpanwar10005/smart_staircase_lighting_system" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile"><i data-lucide="github"></i></a>
                   </div>
                 </div>
                 <div class="role-badge">Oct – Nov 2024</div>
@@ -617,7 +617,7 @@
                 <div class="project-header-top">
                   <i data-lucide="bot" class="project-icon"></i>
                   <div class="project-links">
-                    <a href="https://github.com/Aryanpanwar10005" target="_blank" rel="noopener noreferrer"><i data-lucide="github"></i></a>
+                    <a href="https://github.com/Aryanpanwar10005" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile"><i data-lucide="github"></i></a>
                   </div>
                 </div>
                 <h3>Autonomous Robot</h3>
@@ -634,7 +634,7 @@
         </div>
 
         <div class="project-cta">
-          <a href="https://github.com/Aryanpanwar10005" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
+          <a href="https://github.com/Aryanpanwar10005" target="_blank" rel="noopener noreferrer" class="btn btn-primary" aria-label="GitHub Profile">
             Explore Complete Archive
           </a>
         </div>
@@ -659,8 +659,8 @@
             </div>
             <p class="skill-card-desc">Designing low-level systems and robust circuit architectures.</p>
             <div class="skill-badges">
-              <span class="skill-badge"><i class="devicon-cplusplus-plain"></i> Embedded C/C++</span>
-              <span class="skill-badge"><i class="devicon-arduino-plain"></i> Arduino (C/C++)</span>
+              <span class="skill-badge"> Embedded C/C++</span>
+              <span class="skill-badge"> Arduino (C/C++)</span>
               <span class="skill-badge">8051 Family</span>
               <span class="skill-badge">ARM MCU</span>
               <span class="skill-badge">UART / I2C</span>
@@ -683,7 +683,7 @@
             </div>
             <p class="skill-card-desc">Bridging hardware with intelligent processing.</p>
             <div class="skill-badges">
-              <span class="skill-badge"><i class="devicon-python-plain"></i> Python</span>
+              <span class="skill-badge"> Python</span>
               <span class="skill-badge">On-Device AI</span>
               <span class="skill-badge">Edge AI</span>
               <span class="skill-badge">Machine Learning</span>
@@ -729,8 +729,8 @@
             </div>
             <p class="skill-card-desc">Tools and platforms that power the build pipeline.</p>
             <div class="skill-badges">
-              <span class="skill-badge"><i class="devicon-github-original"></i> GitHub Actions</span>
-              <span class="skill-badge"><i class="devicon-git-plain"></i> Git</span>
+              <span class="skill-badge"> GitHub Actions</span>
+              <span class="skill-badge"> Git</span>
               <span class="skill-badge">Supabase</span>
               <span class="skill-badge">Firebase</span>
               <span class="skill-badge">Railway</span>
@@ -773,11 +773,11 @@
             </div>
             <p class="skill-card-desc">Core languages used for full-stack and embedded development.</p>
             <div class="skill-badges">
-              <span class="skill-badge"><i class="devicon-python-plain"></i> Python</span>
-              <span class="skill-badge"><i class="devicon-javascript-plain"></i> JavaScript</span>
-              <span class="skill-badge"><i class="devicon-typescript-plain"></i> TypeScript</span>
-              <span class="skill-badge"><i class="devicon-cplusplus-plain"></i> Embedded C/C++</span>
-              <span class="skill-badge"><i class="devicon-arduino-plain"></i> Arduino (C/C++)</span>
+              <span class="skill-badge"> Python</span>
+              <span class="skill-badge"> JavaScript</span>
+              <span class="skill-badge"> TypeScript</span>
+              <span class="skill-badge"> Embedded C/C++</span>
+              <span class="skill-badge"> Arduino (C/C++)</span>
             </div>
           </div>
 
@@ -865,7 +865,7 @@
             ideas, or just say hi — my inbox is always open!
           </p>
           <a href="mailto:aryanpanwar10005@gmail.com" class="btn btn-primary"
-            >Say Hello</a
+             aria-label="Email Contact">Say Hello</a
           >
         </div>
       </div>
@@ -874,7 +874,8 @@
     </main>
 
     <!-- Footer -->
-    <footer>
+    </main>
+  <footer>
       <div class="container footer-content">
         <div class="footer-socials">
           <a
